<resources>
    <string name="app_name">Quick_Home</string>
    <string name="login">login</string>
    <string name="Login">Login</string>
    <string name="enter_the_email">Enter The Email</string>
    <string name="enter_the_password">Enter The Password</string>
    <string name="email_id">Email id</string>
    <string name="signup">SignUp</string>
    <string name="logout">logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="signin">SignIn</string>
    <string name="sign_in">Sign In</string>
    <string name="payment_details">Payment Details</string>
    <string name="pickup_pickup_address">Pickup: [Pickup Address]</string>
    <string name="dropoff_dropoff_address">Dropoff: [Dropoff Address]</string>
    <string name="amount_total_amount">Amount: $[Total Amount]</string>
    <string name="card_number">Card Number</string>
    <string name="submit_payment">Submit Payment</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="cvv">CVV</string>
    <string name="mm_yy">MM/YY</string>
    <string name="pickup_location">Pickup Location</string>
</resources>

